# RAG

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  system_prompt.txt
agenticrag/: 1-agenticrag.ipynb
data/vector_store/: chroma.sqlite3
notebook/: document.ipynb
